# Weathering_U

./: .env.example  .gitignore  API_REFERENCE.md  CITIES_UPDATE_TEST_RESULTS.md  COMPREHENSIVE_E2E_TEST_RESULTS.md  DOCUMENTATION.md  E2E_TESTING_COMPREHENSIVE_REPORT.md  E2E_TESTING_FILES_CREATED.md  E2E_TESTING_FINAL_CHECKLIST.md  E2E_TESTING_README.md  E2E_TESTING_TICKET_SUMMARY.md  E2E_TEST_SUMMARY.md  ENV_VARIABLES.md  EXAMPLES.md  FINAL_QA_SUMMARY.md  FunctionaPrograming_revision.md  FunctionalProgramingA_Weather_ID_kelompok6.md  IMPLEMENTATION_SUMMARY.md  PARALLEL_FORECAST_SUMMARY.md  QA_TEST_REPORT.md  QUICKSTART.md  README.md  TASK_COMPLETION_SUMMARY.md  comprehensive_e2e_test.sh  e2e_test.sh  index.html  package-lock.json  package.json  tailwind.config.js  test-api.js  test_parallel_forecast.sh  vite.config.js
backend/: .env.example  Cargo.toml  DATE_UTILS_IMPLEMENTATION.md  ENSEMBLE_NEXTWEEK_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  PARALLEL_FORECAST_IMPLEMENTATION.md  README.md  TESTING.md  rustc-ice-2025-12-07T06_00_00-1652.txt
backend/data/: cities.json
backend/src/: cities.rs  errors.rs  lib.rs  main.rs
backend/src/models/: city.rs  ensemble.rs  forecast.rs  forecast_request.rs  mod.rs
backend/src/routes/: health.rs  mod.rs  weather.rs
backend/src/runtime/: diagnostics.rs  mod.rs  worker_pool.rs
backend/src/services/: city_service.rs  confidence_calculator.rs  daily_processor.rs  ensemble.rs  ensemble_fetcher.rs  mod.rs  (+4 more)
backend/tests/: ACCEPTANCE_CHECKLIST.md  API_CONTRACT.md  README.md  TEST_SUMMARY.md  test_utils.rs  tests.rs
(+47 files in other folders)
