[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "io-util"] }
futures = "0.3"
num_cpus = "1.16"
once_cell = "1.19"
log = "0.4"
env_logger = "0.10"
rocket_cors = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
